# machineLearn

./: README.md  pyproject.toml
neuralnet/: main.py
neuralnet/network/: activation.py  core.py  network.py
neuralnet/tests/: test_network.py
neuralnet/utils/: logger.py
