[tool.poetry]
name = "machinelearn"
version = "0.1.0"
description = ""
authors = ["btonasse <33516406+btonasse@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
isort = "^5.11.4"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
